fdo#47434: Zero rect. size causing wrong line positions.

Thanks to Korrawit Pruegsanusak <detective.conan.1412@gmail.com>
for the indepth analysis and debugging.

Signed-off-by: Petr Mladek <pmladek@suse.cz>
Signed-off-by: Michael Meeks <michael.meeks@suse.com>