svx/source/svdraw/svdoashp.cxx
@@ -3026,6 +3026,10 @@ void SdrObjCustomShape::TRSetBaseGeometry(const basegfx::B2DHomMatrix& rMatrix, 
     // build and set BaseRect (use scale)
     Point aPoint = Point();
     Size aSize(FRound(aScale.getX()), FRound(aScale.getY()));
+    // fdo#47434 We need a valid rectangle here
+    if( !aSize.Height() ) aSize.setHeight( 1 );
+    if( !aSize.Width() ) aSize.setWidth( 1 );
+
     Rectangle aBaseRect(aPoint, aSize);
     SetSnapRect(aBaseRect);
 
